--- a/desktop/index.html
+++ b/desktop/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self';
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      img-src 'self' data: blob:;
+      font-src 'self' data: https://fonts.gstatic.com;
+      connect-src 'self' ws://localhost:* http://localhost:*;
+      worker-src 'self' blob:;
+      child-src 'none';
+      object-src 'none';
+    ">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>3D Asset Manager</title>
   </head>
   <body>
