feat: enhance thumbnail generation with studio lighting and environment mapping

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -10,7 +10,7 @@
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
       img-src 'self' data: blob:;
       font-src 'self' data: https://fonts.gstatic.com;
-      connect-src 'self' ws://localhost:* http://localhost:*;
+      connect-src 'self' blob: ws://localhost:* http://localhost:*;
       worker-src 'self' blob:;
       child-src 'none';
       object-src 'none';
