--- a/desktop/index.html
+++ b/desktop/index.html
@@ -17,7 +17,7 @@
     ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>3D Asset Manager</title>
+    <title>Forma</title>
   </head>
   <body>
     <div id="app"></div>
