--- a/desktop/index.html
+++ b/desktop/index.html
@@ -8,7 +8,8 @@
       default-src 'self';
       script-src 'self';
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-      img-src 'self' data: blob:;
+      img-src 'self' data: blob: app-media:;
+      media-src 'self' data: blob: app-media:;
       font-src 'self' data: https://fonts.gstatic.com;
       connect-src 'self' blob: ws://localhost:* http://localhost:*;
       worker-src 'self' blob:;
